# Coffee-Compare

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  deep_probe.py  docker-compose.yml  find_domains.py  inspect_patterns.py  probe_more_roasters.py  probe_roasters.py  pyproject.toml  test_scraper.py
.do/: app.yaml
app/: admin.py  config.py  db.py  extraction.py  logging_anon.py  main.py  matching.py  models.py  normalize.py  pricing.py  schemas.py  search.py
app/scrapers/: assembly.py  base.py  blackwhite.py  labeled_strong.py  lacabra.py  onyx.py  registry.py  roguewave.py  shopify.py  superlost.py
app/static/css/: main.css
app/static/js/: heatmap.js
app/templates/: _result_card.html  admin.html  base.html  index.html  privacy.html  results.html
migrations/: env.py
migrations/versions/: 0001_initial.py
scripts/: reindex_search.py  run.py  scrape_all.py  scrape_one.py  seed_roasters.py  start.sh
tests/: conftest.py  test_extraction.py  test_matching.py  test_pricing.py
